# hatchify

./: .gitignore  Dockerfile  README.md  README_EN.md  README_ZH.md  main.py  pyproject.toml
app/business/db/: session.py
app/business/manager/: repository_manager.py  service_manager.py
app/business/models/: graph.py  session.py
app/business/repositories/: graph_version_repository.py  message_repository.py  session_repository.py
app/business/services/: graph_service.py  graph_version_service.py  message_service.py  session_service.py
app/common/constants/: constants.py
app/common/settings/: settings.py
app/core/builder/: graph_builder.py  graph_spec_generator.py
app/core/factory/: agent_factory.py  llm_factory.py  mcp_transport_factory.py  session_manager_factory.py  tool_factory.py
app/core/graph/: dynamic_graph_builder.py  graph_spec_generator.py  stream_handler.py
app/core/hooks/: graph_state_hook.py
app/core/manager/: executor_manager.py  function_manager.py  mcp_manager.py  model_card_manager.py  processor_manager.py  tool_manager.py
app/core/mcp/: mcp_tool_loader.py  mcp_tool_wrapper.py
app/core/nodes/: function_node.py
app/core/prompts/: prompts.py
app/core/tools/: math_tool.py
app/core/utils/: json_generator.py  webhook_utils.py
app/launch/: launch.py
hatchify/business/db/: session.py
hatchify/business/services/: graph_service.py
hatchify/business/utils/: sse_helper.py
hatchify/launch/: launch.py
resources/: .env.example  development.yaml  example.mcp.toml  example.models.toml  example.toml
web/: README.md  README_ZH.md
(+54 files in other folders)
