[project]
name = "hatchify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "fastapi-pagination>=0.15.0",
    "loguru>=0.7.3",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic-settings[yaml]>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
